@@ -23,6 +23,8 @@
   * No longer specifically switches booting the OpenCore EFI to graphics mode
 - Changes 'disable_mac_compat_check' Config Option to 'disable_compat_check'
   * Makes this consistent with other similar options
+- Changes 'set_mac_boot_args' Config Option to 'set_boot_args'
+  * Makes this consistent with other similar options
 
 
 0.13.1.AB (02 Mar 2021):
